--- a/brainTrainer/trainer/templates/flipper.html
+++ b/brainTrainer/trainer/templates/flipper.html
@@ -20,7 +20,7 @@
       <![endif]-->
     </head>
     <body>
-      <h1>Hack Your Brain!</h1>
+      <h1>This is the menu</h1>
       <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
       <script src="{% static 'js/jquery.min.js' %}"></script>
       <!-- Include all compiled plugins (below), or include individual files as needed -->
