--- a/brainTrainer/trainer/templates/flipper.html
+++ b/brainTrainer/trainer/templates/flipper.html
@@ -1,29 +1,42 @@
-{% load staticfiles %}
-{% load tz %}
-<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="bleh">
-  <title>Hack Your Brain</title>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Hack your Brain Game</title>
 
-  <!-- Bootstrap -->
-  <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-  <link href="{% static 'css/style.css' %}" rel="stylesheet">
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- Hack Your Brian -->
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-      <![endif]-->
-    </head>
-    <body>
-      <h1>This is the menu</h1>
-      <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-      <script src="{% static 'js/jquery.min.js' %}"></script>
-      <!-- Include all compiled plugins (below), or include individual files as needed -->
-      <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    </body>
-    </html>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="container">
+      <div class="app">
+      <div class="row">
+      <div class="">
+        <h1>Choose Wisely</h1>
+        <div class="feedback-icons">
+          <i class="fa fa-leaf" aria-hidden="true"></i>
+        </div>
+        <img src="https://raw.githubusercontent.com/janauhrich/building-responsive-websites/master/code/build/custom/img/sushi.png"/>
+      </div>
+      </div>
+      </div>
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+      <script src="https://use.fontawesome.com/64a5cea4a4.js"></script>
+  </body>
+</html>
