Added invisible buttons to food image on page

--- a/brainTrainer/trainer/templates/flipper.html
+++ b/brainTrainer/trainer/templates/flipper.html
@@ -28,8 +28,11 @@
         <div class="feedback-icons">
           <i class="fa fa-leaf" aria-hidden="true"></i>
         </div>
+         <div id="the-image" class="invisible-button">
+          <a id="left" href="#"><div class="left"></div></a>
+          <a id="right" href="#"><div class="right"></div></a>
         <img src="https://raw.githubusercontent.com/janauhrich/building-responsive-websites/master/code/build/custom/img/sushi.png"/>
-      </div>
+        </div>
       </div>
       </div>
 
