--- a/brainTrainer/trainer/templates/flipper.html
+++ b/brainTrainer/trainer/templates/flipper.html
@@ -18,6 +18,17 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <script>
+          function initializeChoices() {
+            //for (var i = 0; i < 20; i++) choices[i] = 0;
+            var goodChoicesMade = 0;
+          }
+      </script>
+    <script>
+         function recordGoodChoice(choiceArray, index) {
+           choiceArray[index].value = 1;
+         }
+    </script>
   </head>
   <body>
     <div class="container">
