More front end files
- food images
- removed about and contact links
- revised home page copy

--- a/brainTrainer/trainer/templates/menu.html
+++ b/brainTrainer/trainer/templates/menu.html
@@ -25,9 +25,12 @@
       <div class="row">
       <div class="">
         <h1>Hack Your Brain</h1>
+        <p>
+          Train your brain to see the overall picture that results from food choices.
+          If the image is a food you would want to eat, click right. To discard the food, click left.
+          Your choice will be reflected by a final image of your garden.
+        </p>
         <ul id="mainnav">
-  <li><a class="mainnavItem" href="#about" title="About">About</a></li>
-  <li><a class="mainnavItem" href="#contact" title="Contact">Contact</a></li>
 </ul>
         <div id="the-image" class="invisible-button">
           <a id="left" href="#"><div class="left"></div></a>
