Fixed path to img directory

--- a/brainTrainer/trainer/templates/flipper.html
+++ b/brainTrainer/trainer/templates/flipper.html
@@ -42,7 +42,7 @@
          <div id="the-image" class="invisible-button">
           <a id="left" href="#"><div class="left"></div></a>
           <a id="right" href="#"><div class="right"></div></a>
-        <img src="https://raw.githubusercontent.com/janauhrich/building-responsive-websites/master/code/build/custom/img/sushi.png"/>
+        <img src="../static/img/sushi.png"/>
         </div>
       </div>
       </div>
