--- a/brainTrainer/trainer/templates/menu.html
+++ b/brainTrainer/trainer/templates/menu.html
@@ -35,8 +35,8 @@
         <div id="the-image" class="invisible-button">
           <a id="left" href="#"><div class="left"></div></a>
           <a id="right" href="#"><div class="right"></div></a>
-        <img src="https://raw.githubusercontent.com/janauhrich/building-responsive-websites/master/code/build/custom/img/sushi.png"/>
-         <br/> <button type="button" class="register2"><a style="color: white; text-decoration:none;" href="#" class="register-link"><strong>Play</strong></a></button>
+        <img src="../static/img/team_rocket.jpg"/>
+         <br/> <button type="button" class="register2"><a style="color: white; text-decoration:none;" href="flipper.html" class="register-link"><strong>Play</strong></a></button>
 
         </div>
 
