Revised home page text
- introduced the concept of holistic health and fitness

--- a/brainTrainer/trainer/templates/menu.html
+++ b/brainTrainer/trainer/templates/menu.html
@@ -26,9 +26,13 @@
       <div class="">
         <h1>Hack Your Brain</h1>
         <p>
-          Train your brain to see the overall picture that results from food choices.
-          If the image is a food you would want to eat, click right. To discard the food, click left.
-          Your choice will be reflected by a final image of your garden.
+            Did you know that your overall health and fitness is the result of many individual decisions you make every day?
+
+            This game will illustrate how small choices can influence the overall picture that results from food choices.
+
+            The Game will show you a series of images.
+            If the image is a food you would want to eat, click right. To discard the food, click left.
+          Your choices will matched up with a final garden image that reflects the choices you made. 
         </p>
         <ul id="mainnav">
 </ul>
