--- a/brainTrainer/trainer/templates/garden.html
+++ b/brainTrainer/trainer/templates/garden.html
@@ -14,6 +14,12 @@
   <link href="{% static 'css/style.css' %}" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
 
+  <style media="screen">
+    body {
+      background-image: url('http://i.imgur.com/7iwyvY7.jpg');
+    }
+  </style>
+
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -23,6 +29,7 @@
     </head>
     <body>
       <h1>This is the garden you created</h1>
+
       <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
       <script src="{% static 'js/jquery.min.js' %}"></script>
       <!-- Include all compiled plugins (below), or include individual files as needed -->
