--- a/brainTrainer/trainer/templates/menu.html
+++ b/brainTrainer/trainer/templates/menu.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -6,7 +7,6 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Hack your Brain Game</title>
 
-<<<<<<< HEAD
   <!-- Bootstrap -->
   <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
   <link href="{% static 'css/style.css' %}" rel="stylesheet">
@@ -14,16 +14,6 @@
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-=======
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <!-- Hack Your Brian -->
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
-    <link href="../static/css/styles.css" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
->>>>>>> 3996e283e51aa61cc34139b524b9bcf3b2716db2
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -42,7 +32,7 @@
 
             The Game will show you a series of images.
             If the image is a food you would want to eat, click right. To discard the food, click left.
-          Your choices will matched up with a final garden image that reflects the choices you made. 
+          Your choices will matched up with a final garden image that reflects the choices you made.
         </p>
         <ul id="mainnav">
 </ul>
